<resources>
    <string name="app_name">Monumental Habits</string>
    <string name="avatar">avatar</string>
    <string name="homepage">Homepage</string>
    <string name="motivation_phrase">We first make our habits, and then our habits makes us.</string>
    <string name="author">- anonymous</string>
    <string name="image_motivation">image_motivation</string>
    <string name="rectangle_motivation">rectangle_motivation</string>
    <string name="tent">tent</string>
    <string name="courses">courses</string>
    <string name="community">community</string>
    <string name="settings">settings</string>
    <string name="habits">HABITS</string>
    <string name="_17">17</string>
    <string name="day_box_1">day_box_1</string>
    <string name="bk_tracking">bk_tracking</string>
    <string name="button_plus">button_plus</string>
    <string name="sun">SUN</string>
    <string name="_18">18</string>
    <string name="mon">MON</string>
    <string name="_19">19</string>
    <string name="tue">TUE</string>
    <string name="day_box_3">day_box_3</string>
    <string name="day_box_2">day_box_2</string>
    <string name="day_box_4">day_box_4</string>
    <string name="_20">20</string>
    <string name="wed">WED</string>
    <string name="day_box_5">day_box_5</string>
    <string name="_21">21</string>
    <string name="thu">THU</string>
    <string name="day_box_6">day_box_6</string>
    <string name="_22">22</string>
    <string name="fri">FRI</string>
    <string name="_23">23</string>
    <string name="sat">SAT</string>
    <string name="rectangle_habits_white">rectangle_habits_white</string>
    <string name="read_a_book">Read A Book</string>
    <string name="line_separation">line_separation</string>
    <string name="yellow_rec_10_1">yellow_rec_10_1</string>
    <string name="yellow_rec_100_1">yellow_rec_100_1</string>
    <string name="now_date_vector">now_date_vector</string>
    <string name="rectangle_for_text_1">rectangle_for_text_1</string>
    <string name="yellow_rec_10_2">yellow_rec_10_2</string>
    <string name="yellow_rec_100_2">yellow_rec_100_2</string>
    <string name="rectangle_for_result">rectangle_for_result</string>
    <string name="yellow_triangle_1">yellow_triangle_1</string>
    <string name="yellow_triangle_3">yellow_triangle_3</string>
    <string name="yellow_rec_10_4" />
    <string name="yellow_rec_100_4" />
    <string name="yellow_rec_10_5" />
    <string name="yellow_rec_100_5" />
    <string name="yellow_rec_10_6" />
    <string name="yellow_rec_100_6" />
    <string name="yellow_triangle_7" />
    <string name="yellow_rec_10_7" />
    <string name="rectangle_for_result_2">rectangle_for_result_2</string>
    <string name="exercise">Exercise</string>
    <string name="rectangle_for_text_2" />
    <string name="rectangle_for_text_3" />
    <string name="wake_up_early">Wake Up Early</string>
    <string name="walk_dog">Walk Dog</string>
    <string name="rectangle_for_result_3">rectangle_for_result_3</string>
    <string name="rectangle_for_result_4">rectangle_for_result_4</string>
    <string name="zaglav">Profile</string>
    <string name="name">Marilyn Aminoff</string>
    <string name="date">This week</string>
    <string name="podzaglav">Total Work Hours</string>
    <string name="status_task">Task Completed</string>
    <string name="layout2">Billing methods</string>
    <string name="layout3">Longest Streak</string>
    <string name="streak">20 Days</string>
    <string name="girl">girl</string>
    <string name="check_your_profile">Check Your Profile</string>
    <string name="mail">jonathansmith@gmail.com</string>
    <string name="view">View</string>
    <string name="general">General</string>
    <string name="support">Support</string>
    <string name="water_plans">Water Plans</string>
    <string name="read_a_book_2">Read a Book</string>
    <string name="repeat_everyday">Repeat everyday</string>
    <string name="reminders_5_00_am">Reminders: 5:00 am</string>
    <string name="january">January</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_10">10</string>
    <string name="num_11">11</string>
    <string name="num_12">12</string>
    <string name="num_13">13</string>
    <string name="num_14">14</string>
    <string name="num_15">15</string>
    <string name="num_16">16</string>
    <string name="num_17">17</string>
    <string name="num_18">18</string>
    <string name="num_19">19</string>
    <string name="num_20">20</string>
    <string name="num_21">21</string>
    <string name="num_22">22</string>
    <string name="num_23">23</string>
    <string name="num_24">24</string>
    <string name="num_25">25</string>
    <string name="num_26">26</string>
    <string name="num_27">27</string>
    <string name="num_28">28</string>
    <string name="num_29">29</string>
    <string name="num_30">30</string>
    <string name="num_31">31</string>
    <string name="analytics">Analytics</string>
    <string name="title_20_days">20 Days</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="title_0_days">0 Days</string>
    <string name="current_streak">Current Streak</string>
    <string name="title_98_persent">98 %</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="average_easiness_score">Average Easiness Score</string>
    <string name="mark_habit_as_complete">Mark Habit as Complete</string>
    <string name="mark_habit_as_missed">Mark Habit as Missed</string>
    <string name="num_one">18</string>
    <string name="num_two">12</string>
    <string name="date_one">06/14</string>
    <string name="date_two">06/15</string>
    <string name="date_three">06/16</string>
    <string name="date_four">Today</string>
    <string name="notifications">Notifications</string>
    <string name="customize_notifications">Customize notifications</string>
    <string name="more_customization">More customization</string>
    <string name="customize_it">Customize it more to fit your usage</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="this_week">This week</string>

    <string-array name="Time">
        <item>This year</item>
        <item>This month</item>
        <item>This week</item>
        <item>This day</item>
    </string-array>
</resources>