<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige"
    android:fitsSystemWindows="true"
    tools:ignore="MissingConstraints, RtlSymmetry, RtlHardcoded, UnusedAttribute, BottomAppBar">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bk_thacking"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="204dp"
        android:contentDescription="@string/bk_tracking" />

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beige"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:navigationIcon="@drawable/menu_icon"
            android:paddingTop="39dp"
            android:paddingStart="10dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/avatar"
                android:layout_gravity="right"
                android:layout_marginEnd="27dp"
                android:contentDescription="@string/avatar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:fontFamily="@font/manrope_bold"
                android:textAppearance="@style/TitleStyle"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#0000"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/motivation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                android:layout_alignParentRight="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">


                    <ImageView
                        android:id="@+id/human"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:background="#0000"
                        android:contentDescription="@string/image_motivation"
                        android:src="@drawable/human_motivation" />

                    <TextView
                        android:id="@+id/motivation_phrase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="26dp"
                        android:layout_marginEnd="-68dp"
                        android:layout_toStartOf="@+id/human"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="23dp"
                        android:text="@string/motivation_phrase"
                        android:textAppearance="@style/MotivationStyle"
                        android:letterSpacing="-0.0333" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:layout_gravity="bottom"
                        android:textAppearance="@style/AuthorTextStyle"
                        android:layout_alignBottom="@+id/motivation_phrase"
                        android:layout_alignStart="@+id/motivation_phrase"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/motivation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_habits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habits"
                        style="@style/TextHabitsStyle"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="28dp"
                        app:layout_constraintTop_toTopOf="@+id/constraint_info"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/day_box_1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/rectangle_motivation"
                        android:layout_marginTop="19dp"
                        android:layout_marginStart="69dp"
                        app:layout_constraintStart_toEndOf="@+id/text_habits"
                        app:layout_constraintTop_toTopOf="@+id/constraint_info"
                        android:contentDescription="@string/day_box_1"/>

                    <TextView
                        android:id="@+id/number1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_17"
                        style="@style/NumberHabitsStyle"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintStart_toStartOf="@+id/day_box_1"
                        app:layout_constraintEnd_toEndOf="@+id/day_box_1"
                        app:layout_constraintTop_toBottomOf="@+id/sunday_1"
                        app:layout_constraintBottom_toBottomOf="@+id/day_box_1"/>

                    <TextView
                        android:id="@+id/sunday_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sun"
                        style="@style/DayOfWeekStyle"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="@+id/number1"
                        app:layout_constraintEnd_toEndOf="@+id/number1"
                        app:layout_constraintTop_toTopOf="@+id/day_box_1"
                        app:layout_constraintBottom_toTopOf="@+id/number1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>







    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_rec"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tent_navigation"
            android:layout_marginStart="23dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/tent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/courses_navigation"
            android:layout_marginTop="27dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/courses" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/community_navigation"
            android:layout_gravity="end"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="100dp"
            android:contentDescription="@string/community" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_navigation"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/settings" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/button_plus"
        android:layout_marginTop="-75dp"
        android:translationZ="10dp"
        app:layout_constraintStart_toStartOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/navigation"
        app:layout_constraintTop_toTopOf="@+id/navigation"
        android:contentDescription="@string/button_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>