<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_navigation"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="0.4"
                android:weightSum="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/tent_navigation"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/tent"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/courses_navigation"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginTop="27dp"
                    android:layout_marginHorizontal="20dp"
                    android:contentDescription="@string/courses" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="end"
                android:weightSum="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/community_navigation"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginTop="26dp"
                    android:layout_marginHorizontal="20dp"
                    android:contentDescription="@string/community"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/settings_navigation"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="22dp"
                    android:contentDescription="@string/settings" />


            </LinearLayout>

        </LinearLayout>




    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/image_view_plus_shadow"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/button_plus"
        android:layout_marginTop="-75dp"
        android:translationZ="10dp"
        app:layout_constraintStart_toStartOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/navigation"
        app:layout_constraintTop_toTopOf="@+id/navigation"
        android:contentDescription="@string/button_plus"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/transparent"
        android:layout_marginBottom="-49dp"
        android:translationZ="11dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toTopOf="@+id/image_view_plus_shadow"
        app:layout_constraintStart_toStartOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="@+id/navigation"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        android:contentDescription="@string/button_plus">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/circle_20"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/button_plus"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<com.google.android.material.floatingactionbutton.FloatingActionButton&ndash;&gt;-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:fabCustomSize="50dp"-->
<!--            android:defaultFocusHighlightEnabled="false"-->
<!--            android:outlineSpotShadowColor="#0000"-->
<!--            android:outlineAmbientShadowColor="@color/transparent"-->
<!--            style="@style/PlusButton"-->

<!--            tools:ignore="UnusedAttribute" />-->